# XPOMCP

./: .gitignore  LICENSE.txt  README.md
active_pomcp/: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  README  TODO.md  aclocal.m4  note  recap  results  smc_mcts.h  tag_results.txt  test_rocksample.py  test_vr.py
active_pomcp/cmake/: FindZ3.cmake
active_pomcp/modules/: avoid.nm
active_pomcp/shield/: rocksample_shield  vr_shield
active_pomcp/src/: XES_logger.h  active_obstacle.h  battery_velocity.cpp  battery_velocity.h  battleship.cpp  battleship.h  beliefstate.cpp  beliefstate.h  coord.h  creator_experiment.cpp  creator_experiment.h  experiment.cpp  experiment.h  experiment_lazy.cpp  experiment_lazy.h  hellinger.h  history.h  lasertag.cpp  lasertag.h  main.cpp  main_lazy.cpp  mcts.cpp  mcts.h  mcts_lazy.cpp  mcts_lazy.h  network.cpp  network.h  node.cpp  node_lazy.cpp  node_lazy.h  node_smc.h  obstacleavoidance.cpp  obstacleavoidance.h  obstacleavoidance_trace.cpp  obstacleavoidance_trace.h  pocman.cpp  pocman.h  refuel.cpp  refuel.h  rocksample.cpp  (+19 more)
shielding/: CMakeLists.txt  README.md  dataset_tiger_60.xes  run_tiger.sh  run_vr.sh  shielding_tiger.py  shielding_vr.py  tiger_shield_60.txt
shielding/code/: ._Makefile.am  ._configure.ac  .directory
shielding/src/: XES_logger.h  battleship.cpp  battleship.h  beliefstate.cpp  beliefstate.h  coord.h  experiment.cpp  experiment.h  main.cpp  mcts.cpp  mcts.h  network.cpp  network.h  node.h  obstacleavoidance.cpp  obstacleavoidance.h  pocman.cpp  pocman.h  rocksample.cpp  rocksample.h  simulator.cpp  simulator.h  tag.cpp  tag.h  testsimulator.h  tiger.cpp  tiger.h  utils.h
unexpected_decisions/: README.md  requirements.txt  xpomcp.py  xpomcp_rocksample.py
unexpected_decisions/example_velreg_trace/Run_0/: beliefsPerStep.csv  stateEvolution.csv
unexpected_decisions/example_velreg_trace/Run_1/: beliefsPerStep.csv  stateEvolution.csv
unexpected_decisions/example_velreg_trace/Run_2/: beliefsPerStep.csv  stateEvolution.csv
unexpected_decisions/example_velreg_trace/Run_3/: beliefsPerStep.csv  stateEvolution.csv
unexpected_decisions/example_velreg_trace/Run_4/: beliefsPerStep.csv  stateEvolution.csv
unexpected_decisions/example_velreg_trace/Run_5/: beliefsPerStep.csv  stateEvolution.csv
unexpected_decisions/example_velreg_trace/Run_6/: beliefsPerStep.csv  stateEvolution.csv
unexpected_decisions/example_velreg_trace/Run_7/: beliefsPerStep.csv  stateEvolution.csv
unexpected_decisions/example_velreg_trace/Run_8/: beliefsPerStep.csv  stateEvolution.csv
unexpected_decisions/example_velreg_trace/Run_9/: beliefsPerStep.csv  stateEvolution.csv
unexpected_decisions/pomcp/: CMakeLists.txt  README.md
unexpected_decisions/pomcp/src/: beliefstate.cpp  beliefstate.h  experiment.cpp  experiment.h  history.h  main.cpp  mcts.cpp  mcts.h  network.cpp  network.h  node.cpp  node.h  obstacleavoidance.cpp  obstacleavoidance.h  simulator.cpp  simulator.h  statistic.h  testsimulator.cpp  testsimulator.h  tiger.cpp  tiger.h  utils.h
